--- a/apicurito/config/manager/deployment.tmpl
+++ b/apicurito/config/manager/deployment.tmpl
@@ -17,9 +17,9 @@ spec:
         com.company: Red_Hat
         name: fuse-apicurito
         rht.comp: Fuse
-        rht.comp_ver: "{VERSION}"
+        rht.comp_ver: "{SHORT_VERSION}"
         rht.prod_name: Red_Hat_Integration
-        rht.prod_ver: "{VERSION}"
+        rht.prod_ver: "{SHORT_VERSION}"
         rht.subcomp: fuse-apicurito
         rht.subcomp_t: infrastructure
     spec:
